--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ i		<meta name="description" content="">
 	<body>
 		<div style='font-size:50px;text-align: center;'>EZdiagno</div>
 		<br>
-		<div style='font-size:40px;text-align: center;'>Coming Soon!!</div>
+		<div style='font-size:40px;text-align: center;'>Coming Soon!!!</div>
 		<br>
 		<div style='font-size:24px;text-align: center;'>D-291, Sector-47, Noida</div>
 		<br>
