--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <meta charset="utf-8">
 	<title>EZdiagno</title>
 	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="author" content="Ashish" >
 	
 
    <!-- Mobile Specific Metas
@@ -28,7 +28,7 @@
 
    <!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="rsz_2ezd_logo.png" >
+	<link rel="shortcut icon" href="images/rsz_ezd_logo.png" >
 
 </head>
 
@@ -250,7 +250,7 @@
 
    <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
    <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
-   <script src="js/gmaps.js"></script>
+  <!-- <script src="js/gmaps.js"></script>-->
    <script src="js/waypoints.js"></script>
    <script src="js/jquery.countdown.js"></script>   <script src="js/jquery.placeholder.js"></script>
    <script src="js/backstretch.js"></script>  
