--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 	         <h1>About Us.</h1>
 
-	         <p class="lead">We, at EZdiagno, aim to make your medical journey as smooth as possible. Instead of constant trips to doctors clinic, send your full medical analysis directly to doctors via EZD. Digital copies ensure that your results are always secure. You can also get your results and analysis online.  
+	         <p class="lead">We, at EZdiagno, aim to make your medical journey as smooth as possible. Instead of constant trips to doctor's clinic, send your full medical analysis directly to doctor's via EZD. Digital copies ensure that your results are always secure. You can also get your results and analysis online.  
 	         </p>
 
          </div>
