--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
 			   <div class="columns">
 
 				   <h3><i class="fa fa-home"></i>Address.</h3>
-				   <p>D-291 Sector 47<br>
-						Noida <br>
-						India
+				   <p>B702, Pavilion, Ozone Urbana<br>
+						Bangalore <br>
+						  India
 					</p>
 
 			   </div> 
